--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -92,6 +92,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayout"
         android:layout_margin="5dp"
+        android:onClick="signUp"
         android:text="Sign Up" />
 
     <TextView
