--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -68,6 +68,7 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPersonName"
+            android:password="true"
             android:textColor="#ffffffff"
             android:textColorHint="#ffffffff" />
 
@@ -80,6 +81,7 @@
             android:ems="10"
             android:hint="Confirm Password"
             android:inputType="textPersonName"
+            android:password="true"
             android:textColor="#ffffffff"
             android:textColorHint="#ffffffff" />
 
