--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dibs="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_addpointer"
-        android:icon="@drawable/ic_add_black_24dp"
+    <item
+        android:id="@+id/action_addpointer"
+        android:icon="@drawable/add_button_white_md"
         android:title="@string/action_addEvent"
         dibs:showAsAction="always" />
 </menu>
